--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="TommyPanzram.css">
 </head>
 <body>
-  <audio src="1.mp3"></audio>
-    <audio src="2.mp3"></audio>
-    <audio src="3.mp3"></audio>
+  <audio controls src="1.mp3"></audio>
+    <audio controls src="/2.mp3"></audio>
+    <audio controls src="./3.mp3"></audio>
 </body>
 </html>
