--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <audio controls src="1.mp3"></audio>
-    <audio controls src="/2.mp3"></audio>
-    <audio controls src="./3.mp3"></audio>
+    <audio controls src="2.mp3"></audio>
+    <audio controls src="3.mp3"></audio>
 </body>
 </html>
